# forestFire

./: .gitignore  CMakeLists.txt  ForestFire.cpp  Game.cpp  Game.h  LICENSE  README.md  StateMatrix.cpp  StateMatrix.h  View.cpp  View.h  main.cpp  rule.cu
headers/: ForestFire.h  Game.h  StateMatrix.h  View.h
